traefiks/test.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 30
      containers:
      - image: harbor.knd.com/public/traefik:v2.3.6
        name: traefik
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
        - name: websecure
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --log.level=INFO
        - --accesslog
        - --entryPoints.web.address=:80
        - --entryPoints.websecure.address=:443
        - --api
        - --api.dashboard=true
        - --api.insecure=true
        - --api.debug=true
        - --ping=true
        - --providers
        - --providers.kubernetesIngress
        - --providers.kubernetesCRD
        - --serversTransport.insecureSkipVerify=true
        # - --providers.kubernetesIngress.endpoint=https://192.168.1.29:7443
        - --accesslog
        - --accesslog.filepath=/var/log/traefik_access.log
        - --log
        - --log.level=INFO
        - --log.filepath=/var/log/traefik.log
        - --metrics.prometheus
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2

---

apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
  selector:
    app: Traefik


---

scp knd@192.168.1.5:/opt/certs/dashboard.pem /etc/nginx/certs
scp knd@192.168.1.5:/opt/certs/dashboard-key.pem /etc/nginx/certs


upstream default_backend_dashboard {
    server 192.168.1.32:443    max_fails=3 fail_timeout=10s;
    server 192.168.1.33:443    max_fails=3 fail_timeout=10s;
    server 192.168.1.34:443    max_fails=3 fail_timeout=10s;
    server 192.168.1.35:443    max_fails=3 fail_timeout=10s;
}

server {
        listen       80;
        server_name  dashboard.knd.com;
        rewrite ^(.*)$ https://${server_name}$1 permanent;
}
server {
        listen 443 ssl;
        server_name dashboard.knd.com;
        ssl_certificate     certs/dashboard.pem;
        ssl_certificate_key certs/dashboard-key.pem;
        ssl_session_cache shared:SSL:1m;
        ssl_session_timeout  10m;
        ssl_ciphers HIGH:!aNULL:!MD5;
        ssl_prefer_server_ciphers on;

        location / {
                proxy_pass http://default_backend_dashboard;
                proxy_set_header Host       $http_host;
                proxy_set_header x-forwarded-for $proxy_add_x_forwarded_for;
          }
}
