traefiks/route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik  
    # traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: traefik.knd.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: traefik
          servicePort: 8080
